FIX logo z-index
Fix the logo's z-index so that it won't interfere with button clicks

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -80,7 +80,7 @@ body.modal-open #main{
 /* NavBar */
 #nav{
     .navbar{
-        transition: all ease 0.3s;
+        transition: all ease 0.5s;
 
         .container-fluid{
             margin: 0 5vw;
@@ -128,7 +128,6 @@ body.modal-open #main{
     text-align: center;
     margin: 0.5rem 0;
     width: 100vw;
-    z-index: 5000;
     margin-bottom: 0;
 
     a{
@@ -147,7 +146,7 @@ body.modal-open #main{
     a{
         transition: all ease 0.3s;
         color: var(--onyx);
-        opacity: 0;
+        opacity: 1;
         font-size: 3em;
     }
 }
